--- a/src/client/components/Header/index.css
+++ b/src/client/components/Header/index.css
@@ -3,7 +3,7 @@ div.Header {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
 }
 div.Header * {
   white-space: nowrap;
@@ -113,7 +113,7 @@ div.Header > .navigators {
   justify-content: space-around;
   background-color: #eee;
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 70px;
 }
 
